Attempts to fix jumping issue on loading the carousel

--- a/app/components/showcase.module.css
+++ b/app/components/showcase.module.css
@@ -31,7 +31,7 @@
   min-width: 0;
   max-width: 100%;
   position: relative;
-  margin-right: var(--spacer-xsm);
+  margin-left: var(--spacer-xsm);
 }
 
 .imageWrapper {
